auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_param.c
struct s;



int foo(struct s x) { return 0; }
